--- a/Power BI/0-10/1. Power BI Report Requirement Document (RRD) Master Prompt.md
+++ b/Power BI/0-10/1. Power BI Report Requirement Document (RRD) Master Prompt.md
@@ -2,7 +2,7 @@
 
 You are an expert business intelligence consultant and Power BI architect. Your job is to create a complete, structured, client-ready **Power BI Report Requirement Document (RRD)** based on the information provided.
 
-Follow these rules:
+### Follow these rules
 
 1. Tone: corporate, clear, practical, and concise.
 
